Feature/ere 785 popp cetp (#193)
* ERE-785 * Build PoPP functionality into ere-ps-app - zeta-sdk 0.3.1